<resources>
    <string name="app_name">Android100Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">username</string>
    <string name="name">name</string>
    <string name="add">Add</string>
    <string name="huseyn">huseyn</string>
    <string name="surname">surname</string>
    <string name="rzaguliyev">rzaguliyev</string>
    <string name="age">age</string>
    <string name="_21">21</string>
    <string name="id">id</string>
    <string name="_5">5</string>
    <string name="back_to_main">back_to_main</string>
</resources>